#63 - reverting some changes to trade module